--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,11 @@
-<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css" />
-
+<style>
+  body {
+    background: #efefef;
+  }
+  @media (min-width: 320px) {
+    body {
+      background: #ffffff;
+    }
+  }
+</style>
 <div id="root"></div>
